tests/reference/asr-test_annassign_type_mismatch-7dac7be.stderr
semantic error: Type mismatch in annotation-assignment, the types must be compatible
 --> tests/errors/test_annassign_type_mismatch.py:4:5
  |
4 |     x: i32[4] = [1, 2, 3, 4]
  |     ^           ^^^^^^^^^^^^ type mismatch ('i32[4]' and 'list[i32]')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
